intermediate  revision - updated README